# AliasMethodSampling

./: .gitignore  CMakeLists.txt
include/: AliasMethodSampling.hpp
src/: main.cpp
